--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,14 @@
     align-items: center;
     align-content: flex-start;
     margin-top: 30px;
-    background-color: darkgrey;
+    background-color: black;
     font-family: 'Yanone Kaffeesatz', sans-serif;
+    color: aliceblue;
     
     
 }
 
-.sectionSend {
+/* .sectionSend {
     margin-top: 20px;
     margin-bottom: 20px;
     display:flex;
@@ -22,12 +23,12 @@
     font-size: 30px;
     font-weight: bolder;
     
-}
+} */
 
-.resultados{
+/* .resultados{
     font-size: 30px;
     font-weight: bolder;
-}
+} */
 
 .h1Titulo{
     margin-top: 30px;
@@ -35,17 +36,22 @@
     font-size: 60px;
 }
 
-.h2{
+/* .h2{
     font-size: 150px;
-}
+} */
 
 .iframeFollowers{
-    margin-top: 5px;    
+    margin-top: 5px;  
+    color: aliceblue;  
 }
 
-.socialNetwork{
+/* .socialNetwork{
     display:flex;
     flex-direction: row;
     align-items: center; 
     justify-content: space-between;
+} */
+
+.table{
+    color: aliceblue;
 }
