--- a/css/index.css
+++ b/css/index.css
@@ -40,10 +40,10 @@
     font-size: 150px;
 } */
 
-.iframeFollowers{
+/* .iframeFollowers{
     margin-top: 5px;  
     color: aliceblue;  
-}
+} */
 
 /* .socialNetwork{
     display:flex;
@@ -52,6 +52,6 @@
     justify-content: space-between;
 } */
 
-.table{
+/* .table{
     color: aliceblue;
-}
+} */
