--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 .bodyIndex {
-    display:flex;
+    /* display:flex; */
     justify-content: center;
     flex-direction: column;
     align-items: center;
     align-content: flex-start;
-    margin-top: 30px;
-    background-color: black;
+    
+    
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    color: aliceblue;
+    
     
     
 }
