--- a/css/index.css
+++ b/css/index.css
@@ -1,66 +1,27 @@
 .bodyIndex {
-    /* display:flex; */
+    display:flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    align-content: flex-start;
-    
-    
+    align-content: flex-start; 
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    
-    
-    
+    background-color:darkgrey
 }
-
-/* .sectionSend {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display:flex;
-    
-    flex-direction: row;
-    align-items: center; 
-    justify-content: space-between;
-    font-size: 30px;
-    font-weight: bolder;
-    
-} */
-
-/* .resultados{
-    font-size: 30px;
-    font-weight: bolder;
-} */
 
 .h1Titulo{
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 30px;
+    color: black
 }
 
-/* .h2{
-    font-size: 150px;
-} */
 
 .iframeFollowers{
-display:flex;
-justify-content: space-around;
-flex-direction: row;
-flex-wrap: wrap;
-
-
-/* align-items: center; */
-/* align-content: flex-start; */
-}
-
-/* .socialNetwork{
     display:flex;
+    justify-content: space-around;
     flex-direction: row;
-    align-items: center; 
-    justify-content: space-between;
-} */
-
-/* .table{
-    color: aliceblue;
-} */
+    flex-wrap: wrap;
+}
 
 .boxStreamer{
     width: 275px;
